--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <script src="js/bundle.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
 </head>
 
 <body>
   <header class="title-bar">
-    <h1 class="page-title">The Planets of Our Solar System</h1>
+    <!-- <h1 class="page-title">The Planets of Our Solar System</h1> -->
   </header>
 
   <nav class="planets-menu">
